--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
       <div class="main-btn-1"><a href="">Call To Action</a></div>
     </div>
     <div class="icon-container">
-      <img src="img/fb.jpg" alt="" /><img src="img/insta.png" alt="" /><img
-        src="img/twitter.png"
+      <img src="fb.jpg" alt="" /><img src="insta.png" alt="" /><img
+        src="twitter.png"
         alt=""
       />
     </div>
